# hinta

./: CLAUDE.md  Cargo.toml  README.md
src/: http.rs  lib.rs  main.rs  mcp_bin.rs  util.rs
src/matching/: mod.rs
src/mcp/: mod.rs
src/sitemap/: mod.rs
src/sources/: datatronic.rs  gigantti.rs  jimms.rs  jsonld.rs  mod.rs  multitronic.rs  power.rs  proshop.rs  verkkokauppa.rs
src/store/: mod.rs
src/transform/: types.rs
